<resources>
    <string name="app_name">MyLogin</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="register">Register</string>
    <string name="register_caps">REGISTER</string>
    <string name="click_to_login">Click to login</string>
    <string name="register_now">Register now</string>
    <string name="logout">Logout</string>
</resources>